--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ language: go
 go:
   - 1.9.x
   - master
+before_script:
+  - sudo add-apt-repository ppa:masterminds/glide -y
+  - sudo apt-get update -q
+  - sudo apt-get install glide -y
+  - glide install
