--- a/glide.yaml
+++ b/glide.yaml
@@ -1,9 +1,20 @@
-package: clf
+package: github.com/wayarmy/clf
 import:
 - package: github.com/Sirupsen/logrus
+  version: v1.0.4
 - package: github.com/cloudflare/cloudflare-go
+  version: v0.8.4
 - package: github.com/mitchellh/go-homedir
 - package: github.com/olekukonko/tablewriter
 - package: github.com/pkg/errors
+  version: v0.8.0
 - package: github.com/spf13/cobra
+  version: v0.0.1
 - package: github.com/spf13/viper
+  version: v1.0.0
+- package: github.com/wayarmy/clf
+  subpackages:
+  - authen
+  - cmd
+  - dns
+  - zone
